--- a/Topico2.html
+++ b/Topico2.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Arquitetura dos Sistemas Operacionais aisa naldlald</title>
+    <title>Arquitetura dos Sistemas Operacionais</title>
     <link rel="stylesheet" type="text/css" href="Style/Topico2.css">             
   </head>
     
