--- a/Topico2.html
+++ b/Topico2.html
@@ -42,7 +42,7 @@
         <!-- CONTEÚDO -->
         <div class="Conteudo">
           <div id="sobre">
-            <h1> Sistema operacional código fechado </h1>     
+            <h1> Sistema operacional código fechado s s s s</h1>     
             <div id="CaixaDefinicao">
             <h2 class="Coluna1Titulo">Definição</h2>
 
