--- a/Topico2.html
+++ b/Topico2.html
@@ -88,92 +88,182 @@
       </div>
       <div id="LinhaConteudo2">
       </div>
-      <!-- "Modo Gráfico" -->
-      <div id="ModoGraficoTexto">
-         <h2>
+        <!-- "Modo Gráfico" -->
+
+        <div id="ModoGraficoTexto">
+
+          <h2>
             Modo Gráfico
-         </h2>
-         <br>
-         <p>
+          </h2>
+          <br>
+
+          <p>
             É um tipo de interface como o nome diz que possui como principal característica elementos gráficos como ícones e outros indicadores visuais. A principal interação desta unidade é feita com o mouse e o teclado. O ambiente gráfico faz com que o uso do computador seja facilitado.
-         </p>
-      </div>
-      <div id="ModoGraficoImagem">
-         <img src="images/Topico 2/interGrafica.png" alt="Exemplo de Interface Gráfica"  >
-      </div>
-      <!--  -->
-      <div id="AreaDeTrabalho">
-         <p>
-            A área de trabalho ou desktop é o primeiro elemento que nos deparamos ao iniciar um computador de interface gráfica. É um lugar em que como diz o nome, pode ser usado para trabalho. Você pode salvar todos seus diretórios, imagens, imagem, documentos etc. Na área de trabalho e pode criar atalhos para ter acesso rápido a todos seus softwares.
-         </p>
-         <div id="AreaDeTrabalhoImagem">
-            <img src="images/Topico 2/AreaDeTrabalho.jpg" alt="Exemplo de Área de Trabalho">
-         </div>
-      </div>
-      <div id="TrabalhoComJanelas">
-         <p>
-            A interface gráfica e a área de trabalho costumam trabalhar com o gerenciamento de janelas que é uma interface gráfica de usuário. O sistema de janela oferece suporte à dispositivos apontadores como o mouse, porém também utiliza e teclado e pode ser utilizada mais de uma janela ao mesmo tempo.
-         </p>
-         <div id="JanelasImagem">
-            <img src="images/Topico 2/Janelas.jpg" alt="Exemplo de janelas de um sistema operacional">
-         </div>
-      </div>
-      <div id="ConfiguracaoDoSistema">
-         <p>
-            As configurações do sistema, no exemplo do Windows, ajudam a controlar os softwares que são executados automaticamente enquanto o Windows está em processo de inicialização, podendo então prejudicar o desempenho da máquina quando muito softwares são executados ao mesmo tempo.
-         </p>
-         <div id="ConfiguracaoDoSistemaImagem">
-         </div>
-      </div>
-      <div id="FerramentasDoSistemaTexto">
-         <p>
-            As ferramentas do sistema são programas que otimizam o computador e melhoram o funcionamento. Dentre estes programas, é possível encontrar aqueles que liberam espaço na memória e fazem limpeza no disco. Essas ferramentas também configuram a máquina para atuar de certa forma quando houver um evento para otimizar o uso do computador.
-         </p>
-      </div>
-      <div id="FerramentasDoSistemaImagem">
-      </div>
-      <div id="Acessorios">
-         <p>
-            Os acessórios no caso do Windows, são os softwares que vieram instalados juntos com a máquina, alguns exemplos deles são:     
-        </p>
-          <ul>
-                <li>Assistência Rápida</li>
-                <li>Bloco de Notas</li>
-                <li>Calculadora</li>
-                <li>Notas Autoadesivas</li>
-                <li>Ferramenta de Captura</li>
-                <li>Internet Explorer</li>
-                <li>Paint</li>
-                <li>Windows Explorer</li>
-                <li> WordPad</li>
-         </ul>
-            
+          </p>
+
         </div>
-          <div id="MenuDeAjuda">
-          </div>
-          <div id="GerenciamentoDeArquivos">
-          </div>
-          <div id="UsuariosEPermissoes">
-          </div>
-          <div id="InicializacaoFinalizacao">
-          </div>
-          <div id="InicializacaoFinalizacaoImagem">
-          </div>
-          <div id="InstalacaoMaquinaVirtual">
-          </div>
-          <div id="InstalacaoMaquinaVirtualImagem">
-          </div>
-          <div id="Pacotes">
-          </div>
-          <div id="PacotesImagem">
-          </div>
-          <div id="Atualização">
-          </div>
-          <div id="Programas">
-          </div>
-          <div id="ProgramasImagem">
-          </div>
+
+        <div id="ModoGraficoImagem">
+
+          <img src="images/Topico 2/interGrafica.png" alt="Exemplo de Interface Gráfica" width="100%" height="100%">
+
+        </div>
+
+     <!--  -->
+
+           <div id="AreaDeTrabalho">
+
+             <p>
+               A área de trabalho ou desktop é o primeiro elemento que nos deparamos ao iniciar um computador de interface gráfica. É um lugar em que como diz o nome, pode ser usado para trabalho. Você pode salvar todos seus diretórios, imagens, imagem, documentos etc. Na área de trabalho e pode criar atalhos para ter acesso rápido a todos seus softwares.
+             </p>
+
+              <div id="AreaDeTrabalhoImagem">
+
+                <img src="images/Topico 2/AreaDeTrabalho.jpg" alt="Exemplo de Área de Trabalho" width="100%" height="100%">
+
+              </div>
+
+           </div>
+
+              <div id="TrabalhoComJanelas">
+
+                <p>
+                  A interface gráfica e a área de trabalho costumam trabalhar com o gerenciamento de janelas que é uma interface gráfica de usuário. O sistema de janela oferece suporte à dispositivos apontadores como o mouse, porém também utiliza e teclado e pode ser utilizada mais de uma janela ao mesmo tempo.
+                </p>
+
+                <div id="JanelasImagem">
+
+                   <img src="images/Topico 2/Janelas.jpg" alt="Exemplo de janelas de um sistema operacional" width="100%" height="100%">
+
+                </div>
+
+
+
+              </div>
+
+                <div id="ConfiguracaoDoSistema">
+
+                  <p>
+                  As configurações do sistema, no exemplo do Windows, ajudam a controlar os softwares que são executados automaticamente enquanto o Windows está em processo de inicialização, podendo então prejudicar o desempenho da máquina quando muito softwares são executados ao mesmo tempo.
+                  </p>
+
+                    <div id="ConfiguracaoDoSistemaImagem">
+
+                      <img src="images/Topico 2/ConfigDoSistema.png" alt="Configurações do Sistema" width="100%" height="100%">
+
+                    </div>
+
+
+
+                </div>
+
+                  <div id="FerramentasDoSistemaTexto">
+
+                    <p>
+                      As ferramentas do sistema são programas que otimizam o computador e melhoram o funcionamento. Dentre estes programas, é possível encontrar aqueles que liberam espaço na memória e fazem limpeza no disco. Essas ferramentas também configuram a máquina para atuar de certa forma quando houver um evento para otimizar o uso do computador.
+                    </p>
+
+                  </div>
+
+                     <div id="FerramentasDoSistemaImagem">
+
+                       <img src="images/Topico 2/FerramentasDoSistema.jpg" width="100%" height="100%" alt="Ferramentas do Sistema">
+
+                     </div>
+
+                      <div id="Acessorios">
+
+                        <p>
+                            Os acessórios no caso do Windows, são os softwares que vieram instalados juntos com a máquina, alguns exemplos deles são:
+
+                          <br>
+                          <br>
+
+                             <ul>
+
+                                <li>Assistência Rápida</li>
+                                <li>Bloco de Notas</li>
+                                <li>Calculadora</li>
+                                <li>Notas Autoadesivas</li>
+                                <li>Ferramenta de Captura</li>
+                                <li>Internet Explorer</li>
+                                <li>Paint</li>
+                                <li>Windows Explorer</li>
+                                <li> WordPad</li>
+
+                             </ul>
+
+
+                          </p>
+
+                            <div id="AcessoriosImagem">
+
+                                <img src="images/Topico 2/AcessoriosWindows.png" alt="Accessórios Windows" width="100%" height="100%">
+
+                            </div>
+
+                      </div>
+
+                        <div id="MenuDeAjuda">
+
+                          <div id="MenuDeAjudaTexto">
+
+                            <h2>
+                              Menu de Ajuda
+                            </h2>
+
+                              <br>
+                              <br>
+
+                              <p>
+                                Alguns sistemas operacionais possuem um menu de ajuda ou um menu de suporte, um dos exemplos é o Windows. Para acessar o menu de suporte do Windows, abra a ferramenta executar e digite " services.msc " e localize o serviço “Ajuda e Suporte”. Dentro desta aba terá opções de ajuda.
+                              </p>
+
+                          </div>
+
+                              <div id="MenuDeAjudaImagem">
+
+                                <img src="images/Topico 2/MenuDeAjuda.png" alt="Menu de Ajuda" width="100%" height="100%">
+
+                              </div>
+                        </div>
+
+                          <div id="GerenciamentoDeArquivos">
+
+                            </div>
+
+                              <div id="UsuariosEPermissoes">
+
+                              </div>
+
+      <div id="InicializacaoFinalizacao">
+
        </div>
+
+            <div id="InstalacaoMaquinaVirtual">
+
+            </div>
+
+               <div id="InstalacaoMaquinaVirtualImagem">
+
+                </div>
+
+      <div id="Pacotes">
+
+      </div>
+
+          <div id="Atualização">
+
+          </div>
+
+      <div id="Programas">
+
+      </div>
+
+        <div id="ProgramasImagem">
+
+        </div>
+
       <!-- rodapé -->
       <div id="Rodape">
          <div class="Conteudo">
