--- a/Topico4.html
+++ b/Topico4.html
@@ -86,11 +86,32 @@
               <h1>
                 Editor de texto
               </h1>
+            
+            
             </div>
 
             <div id="Definiao">
+              <h1>
+                O que é?
+              </h1>
+
+              <p>
+                Editor de texto é um software como Microsoft Word e WordPad são usados para escrita e formatação de texto que também podem ser usados para programar em certas linguagens como java, html, css e entre outros
+              </p>
+            </div>
+
+            <div id="Formatacoes" >
+              <div id="TituloFormatacoes">
+                <h1>
+                 Algumas formatações disponiveis em editores de texto
+               </h1>
+              </div>
+              <div id="OpcoesFormatacoes" class="CenterOBJ">
+                <div class="FormatacoesCaixa">
 
 
+                </div>
+              </div>
             </div>
         </div>
         <!-- Rodapé -->
