--- a/Topico4.html
+++ b/Topico4.html
@@ -79,7 +79,9 @@
               </div>
           </div>
         </div>
-        
+        <!-- BANNER -->
+        <div id="banner">
+        </div>
         <!-- Conteúdo -->
         <div id="DivDeTodosOsConteudo" Class="Conteudo">
             <div id="Titulo">
@@ -109,5 +111,7 @@
           </div>
       </div>
  </body>
+
+</html>
 
 </html>
