--- a/Topico5.html
+++ b/Topico5.html
@@ -226,7 +226,7 @@ Esse primeiro número representa 2 ou mais células, que ao serem inseridas, a f
 
 MÉDIA (E3:E5, 5)
 
-Para saber mais: <a href: https://support.microsoft.com/pt-br/office/m%C3%A9dia-fun%C3%A7%C3%A3o-m%C3%A9dia-047bac88-d466-426c-a32b-8f33eb960cf6#:~:text=Descri%C3%A7%C3%A3o,retornar%C3%A1%20a%20m%C3%A9dia%20desses%20n%C3%BAmeros.>
+Para saber mais: <a href= "https://support.microsoft.com/pt-br/office/m%C3%A9dia-fun%C3%A7%C3%A3o-m%C3%A9dia-047bac88-d466-426c-a32b-8f33eb960cf6#:~:text=Descri%C3%A7%C3%A3o,retornar%C3%A1%20a%20m%C3%A9dia%20desses%20n%C3%BAmeros">
             </p>
 
       </div>
@@ -265,8 +265,8 @@ Para saber mais:https://support.microsoft.com/pt-br/office/se-fun%C3%A7%C3%A3o-s
         <div id="CondicionaisImagem">
 
           <center>
-          <img src="images/Topico5/FuncaoSe.png" width="60%" height="90%" alt="Função Condicional">
-        </center>
+           <img src="images/Topico5/FuncaoSe.png" width="60%" height="90%" alt="Função Condicional">
+          </center>
 
         </div>
 
