--- a/Topico2.html
+++ b/Topico2.html
@@ -45,7 +45,7 @@
                  </p>
               </div>
               <div id="DefinicaoImagem">
-                  <img src="images/Topico 2/Definicao.png">
+                  <img src="images/Topico2/Definicao.png">
               </div>
               <p>
                Também podemos definir S.Os de código fechado como aqueles cujo seu código-fonte não é disponível para o usuário, e esse tipo de Sistema Operacional é um tanto comum como Windows e Linux. 
@@ -71,9 +71,9 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
            </div>
            
             <div id="HistoriaImagens">
-               <img src="images/Topico 2/Historia.png">
+               <img src="images/Topico2/Historia.png">
 
-               <img src="images/Topico 2/Historia2.png">
+               <img src="images/Topico2/Historia2.png">
             </div>
         </div>
      </div>
@@ -85,10 +85,10 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
                   Para você navegar em seus diretórios, deve-se saber quais você tem, então digite o comando "dir", que irá listar todos os seus arquivos e diretórios. O comando "CD" te possibilitará entrar em pastas, já o "CD…" retornar a pasta anterior.
                </p>
                <div class="NavegacaoImagem">
-                   <img src="images/Topico 2/Diretorio1.png">
+                   <img src="images/Topico2/Diretorio1.png">
                </div>
                <div class="NavegacaoImagem">
-                   <img src="images/Topico 2/Diretorio2.png">
+                   <img src="images/Topico2/Diretorio2.png">
                </div>
                <p>
                   Diferente do modo gráfico, no modo texto, a navegação entre diretórios aparenta ser mais complicada
@@ -108,7 +108,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
                    </p>
                </div>
                <div id="Linha2Coluna2Imagem">
-                   <img src="images/Topico 2/CriacaoDiretorio.png">
+                   <img src="images/Topico2/CriacaoDiretorio.png">
                </div>
            </div>
            <div class="Linha2Colunas">
@@ -126,7 +126,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
                    </p>
                </div>
                <div id="ExclusaoLinha2Imagem">
-                   <img src="images/Topico 2/Exclusao.png" class="CenterOBJ">
+                   <img src="images/Topico2/Exclusao.png" class="CenterOBJ">
                </div>
            </div> 
      </div>
@@ -141,7 +141,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
                porém há certos riscos.
            </p>
            <div id="Linha3Coluna">
-               <img src="images/Topico 2/RenomeacaoDiretorio.png">
+               <img src="images/Topico2/RenomeacaoDiretorio.png">
            </div>
            <p>
                É necessário que o arquivo esteja no mesmo diretório.
@@ -164,7 +164,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
               </p>
            </div>
            <div id="Linha3Coluna2_Imagem">
-              <img src="images/Topico 2/Diretorio3.png">
+              <img src="images/Topico2/Diretorio3.png">
            </div>
         </div>
         <div class="ColunasLinha3">
@@ -185,7 +185,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
               </p>
            </div>
            <div id="Linha3Coluna3_Imagem">
-            <img src="images/Topico 2/CopiaDiretorio.png">
+            <img src="images/Topico2/CopiaDiretorio.png">
            </div>
         </div>
      </div>
@@ -203,7 +203,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
             </p>
         </div>
         <div id="Linha4_Imagem">
-           <img src="images/Topico 2/EdicaoArquivo.png">
+           <img src="images/Topico2/EdicaoArquivo.png">
         </div>
      </div>
       <!-- "Modo Gráfico" -->
@@ -217,7 +217,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
          </p>
       </div>
       <div id="ModoGraficoImagem">
-         <img src="images/Topico 2/interGrafica.png" alt="Exemplo de Interface Gráfica" width="100%" height="100%">
+         <img src="images/Topico2/interGrafica.png" alt="Exemplo de Interface Gráfica" width="100%" height="100%">
       </div>
       <!--  -->
       <div id="AreaDeTrabalho">
@@ -225,7 +225,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
             A área de trabalho ou desktop é o primeiro elemento que nos deparamos ao iniciar um computador de interface gráfica. É um lugar em que como diz o nome, pode ser usado para trabalho. Você pode salvar todos seus diretórios, imagens, imagem, documentos etc. Na área de trabalho e pode criar atalhos para ter acesso rápido a todos seus softwares.
          </p>
          <div id="AreaDeTrabalhoImagem">
-            <img src="images/Topico 2/AreaDeTrabalho.jpg" alt="Exemplo de Área de Trabalho" width="100%" height="100%">
+            <img src="images/Topico2/AreaDeTrabalho.jpg" alt="Exemplo de Área de Trabalho" width="100%" height="100%">
          </div>
       </div>
       <div id="TrabalhoComJanelas">
@@ -233,7 +233,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
             A interface gráfica e a área de trabalho costumam trabalhar com o gerenciamento de janelas que é uma interface gráfica de usuário. O sistema de janela oferece suporte à dispositivos apontadores como o mouse, porém também utiliza e teclado e pode ser utilizada mais de uma janela ao mesmo tempo.
          </p>
          <div id="JanelasImagem">
-            <img src="images/Topico 2/Janelas.jpg" alt="Exemplo de janelas de um sistema operacional" width="100%" height="100%">
+            <img src="images/Topico2/Janelas.jpg" alt="Exemplo de janelas de um sistema operacional" width="100%" height="100%">
          </div>
       </div>
       <div id="ConfiguracaoDoSistema">
@@ -241,7 +241,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
             As configurações do sistema, no exemplo do Windows, ajudam a controlar os softwares que são executados automaticamente enquanto o Windows está em processo de inicialização, podendo então prejudicar o desempenho da máquina quando muito softwares são executados ao mesmo tempo.
          </p>
          <div id="ConfiguracaoDoSistemaImagem">
-            <img src="images/Topico 2/ConfigDoSistema.png" alt="Configurações do Sistema" width="100%" height="100%">
+            <img src="images/Topico2/ConfigDoSistema.png" alt="Configurações do Sistema" width="100%" height="100%">
          </div>
       </div>
       <div id="FerramentasDoSistemaTexto">
@@ -250,7 +250,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
          </p>
       </div>
       <div id="FerramentasDoSistemaImagem">
-         <img src="images/Topico 2/FerramentasDoSistema.jpg" width="100%" height="100%" alt="Ferramentas do Sistema">
+         <img src="images/Topico2/FerramentasDoSistema.jpg" width="100%" height="100%" alt="Ferramentas do Sistema">
       </div>
       <div id="Acessorios">
         <p>
@@ -271,7 +271,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
         </ul>
          
         <div id="AcessoriosImagem">
-            <img src="images/Topico 2/AcessoriosWindows.png" alt="Accessórios Windows" width="100%" height="100%">
+            <img src="images/Topico2/AcessoriosWindows.png" alt="Accessórios Windows" width="100%" height="100%">
         </div>
       </div>
       <div id="MenuDeAjuda">
@@ -285,7 +285,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
             </p>
          </div>
          <div id="MenuDeAjudaImagem">
-            <img src="images/Topico 2/MenuDeAjuda.png" alt="Menu de Ajuda" width="100%" height="100%">
+            <img src="images/Topico2/MenuDeAjuda.png" alt="Menu de Ajuda" width="100%" height="100%">
          </div>
       </div>
       <div id="GerenciamentoDeArquivos">
@@ -299,7 +299,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
          </p>
       </div>
       <div id="GerenciamentoDeArquivosImagem">
-         <img src="images/Topico 2/GerenciamentoDeArquivos.png" alt="Gerenciador de arquivos" height="100%" width="100%">
+         <img src="images/Topico2/GerenciamentoDeArquivos.png" alt="Gerenciador de arquivos" height="100%" width="100%">
       </div>
       <div id="UsuariosEPermissoes">
          <h2>
@@ -317,7 +317,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
          </p>
       </div>
       <div id="UsuariosEPermissoesImagem">
-         <img src="images/Topico 2/UsersAndPermissions.jpg" alt="Gerenciamento de Usuários e Permissões" width="100%" height="100%">
+         <img src="images/Topico2/UsersAndPermissions.jpg" alt="Gerenciamento de Usuários e Permissões" width="100%" height="100%">
       </div>
       <div id="InicializacaoFinalizacao">
          <h2>
@@ -329,7 +329,7 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
          </p>
       </div>
       <div id="InstalacaoMaquinaVirtualImagem">
-         <img src="images/Topico 2/VirtualTutorial.jpg" alt="Instalação Linux Virtual (TecMundo)" width="100%" height="100%">
+         <img src="images/Topico2/VirtualTutorial.jpg" alt="Instalação Linux Virtual (TecMundo)" width="100%" height="100%">
       </div>
       <div id="InstalacaoMaquinaVirtual">
          <h2>
@@ -387,11 +387,11 @@ escuro e com um prompt, onde cada caracter conta como um espaço.
             </p>
          </div>
          <div id="Programas2Imagem">
-            <img src="images/Topico 2/Programas2Imagem.jpg" width="100%" height="100%">
+            <img src="images/Topico2/Programas2Imagem.jpg" width="100%" height="100%">
          </div>
       </div>
       <div id="Programas2Imagem2">
-         <img src="images/Topico 2/Programas2Imagem2.jpg" width="100%" height="100%">
+         <img src="images/Topico2/Programas2Imagem2.jpg" width="100%" height="100%">
       </div>
       <!-- rodapé -->
       <div id="Rodape">
