--- a/Topico2.html
+++ b/Topico2.html
@@ -361,13 +361,13 @@
             </h2>
             <br>
             <ol>
-                <li>Baixe o VirtualBox, abra-o e clique em “Novo” e escolha o sistema operacional que deseja instalar, no caso, “Linux” por exemplo.</li>
+                <li>Baixe o VirtualBox, abra-o e clique em “Novo” e escolha o sistema operacional que deseja instalar, no caso, “Windows” por exemplo.</li>
                 <li>Depois selecione o tamanho da memória RAM mais cabível para sua máquina, lembre-se de administrar bem o armazenamento de sua máquina física, pois ela será alicerce da sua máquina virtual, portanto não escolhe um tamanho que sua máquina não possua.</li>
                 <li>Crie um disco virtual e selecione VDI, após isso, opção “dinamicamente alocado.”</li>
                 <li>Determine onde se localizará o arquivo da máquina virtual e o tamanho dela.</li>
-                <li>Siga essa sequência: configurações > armazenamento > controladora de IDE > vazio > atributos; E selecione o arquivo ISO (arquivo de cd) da versão correspondente do Linux, que deverá achar no seu navegador disponível para download.</li>
+                <li>Siga essa sequência: configurações > armazenamento > controladora de IDE > vazio > atributos; E selecione o arquivo ISO (arquivo de cd) da versão correspondente do Windows, que deverá achar no seu navegador disponível para download.</li>
                 <li>Após selecionar isso, o sistema operacional será inicializado. Acerte as configurações necessárias, como o idioma do sistema, por exemplo.</li>
-                <li>Depois disso, máquina Linux estará pronto para a utilização, certifique-se de organizar os usuários, baixar antivírus, navegadores e todos os programas básicos para sua máquina virtual.</li>
+                <li>Depois disso, máquina Windows estará pronto para a utilização, certifique-se de organizar os usuários, baixar antivírus, navegadores e todos os programas básicos para sua máquina virtual.</li>
             </ol>
         </div>
     </div>     
@@ -379,11 +379,8 @@
          </h2>
          <br>
          <p>
-            Há algumas maneiras alternativas de baixar um sistema operacional Linux num ambiente virtual, e uma dessas maneiras é por meio de pacotes.
-            O Ubuntu é uma versão do Linux disponível para download de várias formas, como em formato ISO por exemplo. Mas é possível instalar por meio de pacotes disponíveis no próprio site da Ubuntu, dê uma olhada:
-            <br>
-            <br>
-            <a target="_blank" href= "https://packages.ubuntu.com/bionic/linux-virtual">Pacotes Ubuntu</a>
+            
+            A Microsoft Windows possui um sistema, que consiste em pacotes de instalação, remoção e atualização de programas do sistema operacional, chamado de MSI (Microsoft System Installer), que vem em arquivos “.msi” e arquivos executáveis. Esse pacote define um conjunto de regras para a instalação de aplicativos e certifica-se de atualizar os programas próprios do Windows e repará-los em ocasionais erros de fábrica.
          </p>
       </div>
       <div id="Atualização">
@@ -392,9 +389,8 @@
          </h2>
          <br>
          <p>
-            A escolha da versão específica de uma máquina Linux é exclusivamente sua, você pode optar por versões mais antigas ou mais modernas, de acordo com o que for mais cômodo. Mas é muito importante ter em mente que as atualizações incluem uma maior variedade de programas, novos funcionamentos e é claro, um maior processamento. Isto tudo acarreta um maior tamanho nas máquinas virtuais, portanto se o seu PC não aguenta rodar um Ubuntu de última versão, instalá-lo só vai gerar complicações. Também é necessário tomar cuidado com versões antigas, pois elas podem ser ultrapassadas e obsoletas, portanto, seu uso acaba sendo inepto e isso pode atrapalhar no desempenho do usuário, dependendo de qual for seu propósito.
-         </p>
-      </div>
+            Em sistemas operacionais de código fechado, as atualizações são dedicadas diretamente aos programas próprios da empresa e o desenvolvimento do código fonte, que no caso não será alterado pelos usuários. As atualizações geralmente vêm acompanhados de programas de pacotes de arquivos que irão gerenciar e modificar os programas necessários, dando uma maior organização e segurança ao usuário. De qualquer forma, é importante que quem instale um sistema operacional de código fechado certifique-se que as atualizações não tornem as versões antigas obsoletas.
+         </p>          
       <div id="Programas">
          <h2>
             Programas
