--- a/Topico3.html
+++ b/Topico3.html
@@ -48,7 +48,7 @@
                 <div class="Title">
                     <h1>Sistema Operacional Código Aberto</h1>
                 </div>
-                <article class="col-div" id="definition">
+                <article class="col-div" class="definition">
                     <h2 class="article-title">
                         Definição:
                     </h2>
@@ -92,7 +92,7 @@
                             </p>
                         </div>
                         <div class="col">
-                            <img class="article-img" src="images/navegation.png">
+                            <img class="article-img" src="images/navegation.png" alt="">
                         </div>
                     </div>
                 </article>
@@ -103,7 +103,7 @@
 
                     <div class="flex-div">
                         <div class="col-6">
-                            <img class="article-img" src="images/creation.png" style="height: 200px">
+                            <img class="article-img" src="images/creation.png" style="height: 200px" alt="">
                         </div>
                         <div class="col-5">
                             <p style="padding-right: 4%">
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="col-div" id="definition">
+                <article class="col-div" class="definition">
                     <h2 class="article-title">
                         Trabalho com janelas
                     </h2>
@@ -291,7 +291,7 @@
 
 
                 </article>
-                <article class="col-div" id="definition">
+                <article class="col-div" class="definition">
                     <h2 class="article-title">
                         Menu de ajuda:
                     </h2>
@@ -348,7 +348,7 @@
                                 Após ligar a máquina, é feita várias verificações pela BIOS, em especial uma revisão geral do hardware da máquina. Após isto, é carregado um pequeno programa que está localizado no 1º setor do disco rígido, chamado de <b>Registro Mestre de Inicialização</b> ou MBR. Ele pode ter uma destas duas funções:
                             </p>
                                 <ul>
-                                     <br>
+                                     
                                     <li class="li_ul">
                                             Achar a partição ativa e carregar o 1º setor desta partição, que tem um pequeno programa com informações sobre o SO que está nesta partição. Ele carregará os componentes básicos, ou carregará um gerenciador de inicialização que pode finalizar o trabalho.
                                     </li>
@@ -366,7 +366,7 @@
 
                     </div>
                 </article>
-                <article class="col-div" id="definition">
+                <article class="col-div" class="definition">
                     <h2 class="article-title">
                         Instalação na máquina virtual:
                     </h2>
