--- a/Topico3.html
+++ b/Topico3.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Sistema Operacional Código Aberto</title>
-    <link rel="stylesheet" type="text/css" href="CSS/content4.css">
-    <link rel="stylesheet" type="text/css" href="CSS/Style4.css">
+    <link rel="stylesheet" type="text/css" href="Style/content3.css">
+    <link rel="stylesheet" type="text/css" href="Style/Topico3.css">
 </head>
 
 <body id="body">
