--- a/Topico3.html
+++ b/Topico3.html
@@ -48,7 +48,7 @@
                 <div class="Title">
                     <h1>Sistema Operacional Código Aberto</h1>
                 </div>
-                <article class="col-div" class="definition">
+                <article class="col-div definition">
                     <h2 class="article-title">
                         Definição:
                     </h2>
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="col-div" class="definition">
+                <article class="col-div definition">
                     <h2 class="article-title">
                         Trabalho com janelas
                     </h2>
@@ -291,7 +291,7 @@
 
 
                 </article>
-                <article class="col-div" class="definition">
+                <article class="col-div definition">
                     <h2 class="article-title">
                         Menu de ajuda:
                     </h2>
@@ -366,7 +366,7 @@
 
                     </div>
                 </article>
-                <article class="col-div" class="definition">
+                <article class="col-div definition">
                     <h2 class="article-title">
                         Instalação na máquina virtual:
                     </h2>
