--- a/Topico3.html
+++ b/Topico3.html
@@ -18,7 +18,7 @@
                 <ul class="MenuFont">
 
                     <li id="OnSite">
-                        Arquitetura
+                        S.O Código Aberto
                     </li>
 
                     <li class="Menu">
