--- a/Topico3.html
+++ b/Topico3.html
@@ -18,7 +18,7 @@
                 <ul class="MenuFont">
 
                     <li id="OnSite">
-                        S.O Código Aberto
+                        Arquitetura
                     </li>
 
                     <li class="Menu">
