Arrumando o topico 2 de novo

--- a/Topico2.html
+++ b/Topico2.html
@@ -41,13 +41,13 @@
            <div id="ConteudoDefinicao">
               <div id="DefinicaoTexto">
                  <p>
-                     Sistemas operacionais de código fechado são aqueles que não permitem o usuário de baixar aplicativos, softwares, que não sejam pertencentes a própria desenvolvedora do S.O, exemplo, dispositivos IOS, são impossibilitados de baixar softwares android. Windows Phone é de código fechado, portanto todos os aplicativos pertencem a Microsoft. Se computadores Windows atuais fossem de código fechado (o que não é verdade), o usuário não iria poder navegar através do google chrome, internet explorer, Firefox, Opera, etc; somente seria permitido o uso do navegador Edge, que pertence a Microsoft. 
+                     Sistemas operacionais de código fechado não permitem o usuário de baixar aplicativos, softwares, que não sejam pertencentes a própria desenvolvedora do S.O, exemplo, dispositivos IOS, são impossibilitados de baixar softwares android. Windows Phone é de código fechado, portanto todos os aplicativos pertencem a Microsoft. Se computadores Windows atuais fossem de código fechado, o usuário não iria poder navegar através do google chrome, internet explorer, Firefox, Opera, etc; somente seria permitido o uso do navegador Edge, que pertence a Microsoft. 
                  </p>
               </div>
               <div id="DefinicaoImagem">
                   <img src="images/Topico2/Definicao.png" alt="Definição de código fechado">
               </div>
-              <p>
+              <p class="Espacamento">
                Também podemos definir S.Os de código fechado como aqueles cujo seu código-fonte não é disponível para o usuário, e esse tipo de Sistema Operacional é um tanto comum como Windows e Linux. 
               </p>
            </div>
@@ -383,14 +383,15 @@
             A Microsoft Windows possui um sistema, que consiste em pacotes de instalação, remoção e atualização de programas do sistema operacional, chamado de MSI (Microsoft System Installer), que vem em arquivos “.msi” e arquivos executáveis. Esse pacote define um conjunto de regras para a instalação de aplicativos e certifica-se de atualizar os programas próprios do Windows e repará-los em ocasionais erros de fábrica.
          </p>
       </div>
-      <div id="Atualização">
+      <div id="Atualizacao">
          <h2>
             Atualização
          </h2>
          <br>
          <p>
             Em sistemas operacionais de código fechado, as atualizações são dedicadas diretamente aos programas próprios da empresa e o desenvolvimento do código fonte, que no caso não será alterado pelos usuários. As atualizações geralmente vêm acompanhados de programas de pacotes de arquivos que irão gerenciar e modificar os programas necessários, dando uma maior organização e segurança ao usuário. De qualquer forma, é importante que quem instale um sistema operacional de código fechado certifique-se que as atualizações não tornem as versões antigas obsoletas.
-         </p>          
+         </p>  
+        </div>  
       <div id="Programas">
          <h2>
             Programas
@@ -400,8 +401,8 @@
             Programas consistem em softwares feitos por programadores, com funções específicas para auxiliar no uso e aproveitamento de um sistema operacional. Seja um explorador de arquivos, gerenciador de tarefas, navegador web, galeria de fotos ou reprodutor de vídeos, todos são exemplos de programas voltadas a certas funções que fornecem ao usuário uma maior gama de possibilidades ao usar a máquina, pois tornam seu uso mais abrangente e prático.
          </p>
       </div>
-    </div>
-         
+    
+    </div>     
     <!--    Linha 12         -->
     <div id="Linha12">
         <div id="Programas2">
