--- a/Topico3.html
+++ b/Topico3.html
@@ -16,17 +16,17 @@
 
             <div id="Header_Menus">
                 <ul class="MenuFont">
+                    
+                     <li id="OnSite">
+                        S.O Codigo Aberto
+                     </li>
 
-                    <li id="OnSite">
-                        Arquitetura
+                    <li class="Menu">
+                        <a href="Topico1.html"> Arquitetura </a>
                     </li>
 
                     <li class="Menu">
                         <a href="Topico2.html"> S.O Codigo Fechado </a>
-                    </li>
-
-                    <li class="Menu">
-                        <a href="Topico3.html"> S.O Codigo Aberto</a>
                     </li>
 
                     <li class="Menu">
