--- a/Topico2.html
+++ b/Topico2.html
@@ -48,7 +48,7 @@
                   <img src="images/Topico2/Definicao.png" alt="Definição de código fechado">
               </div>
               <p class="Espacamento">
-               Também podemos definir S.Os de código fechado como aqueles cujo seu código-fonte não é disponível para o usuário, e esse tipo de Sistema Operacional é um tanto comum como Windows e Linux. 
+               Também podemos definir S.Os de código fechado como aqueles cujo seu código-fonte não é disponível para o usuário, e esse tipo de Sistema Operacional é um tanto comum como Windows.
               </p>
            </div>
         </div>
