--- a/Topico5.html
+++ b/Topico5.html
@@ -18,7 +18,7 @@
                 <ul class="MenuFont">
                   
                   <li class="Menu"> 
-                   <a href="Topico1.html.html"> Arquitetura </a>
+                   <a href="Topico1.html"> Arquitetura </a>
                   </li>
                   
                   <li class="Menu"> 
