--- a/Topico3.html
+++ b/Topico3.html
@@ -297,10 +297,7 @@
                     </h2>
                     <div class="container">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.
-                            Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
-                            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci.
-
+                             "Alguns sistemas operacionais possuem um menu de ajuda ou um menu de suporte, um dos exemplos é o Windows. Para acessar o menu de suporte do Windows, abra a ferramenta executar e digite " services.msc " e localize o serviço “Ajuda e Suporte”. Dentro desta aba terá opções de ajuda."
                         </p>
                         <img class="article-img" src="images/Topico3/menudeajuda.jpg" alt=" " />
                     </div>
