Aprimoramentos no Tópico 2

--- a/Topico2.html
+++ b/Topico2.html
@@ -32,6 +32,10 @@
            </div>
         </div>
      </div>
+       <!--  BANNER     -->
+    <div id="Banner" class="backgroundIMG">
+       
+    </div>       
      <!-- CONTEÚDO -->
      <div class="Conteudo">
        <div id="sobre">
