--- a/Topico2.html
+++ b/Topico2.html
@@ -4,7 +4,7 @@
       <title>Arquitetura dos Sistemas Operacionais</title>
       <link rel="stylesheet" type="text/css" href="Style/Topico2.css">
    </head>
-   <body id="body">
+   <body>
       <!-- cabeçario -->
       <div id="Header" class="CenterOBJ">
         <div class="Conteudo">
