Aprimoramente do tópico 4

--- a/Topico4.html
+++ b/Topico4.html
@@ -42,10 +42,11 @@
           </div>
         </div>
         
+            <div id="Banner" class="backgroundIMG">
+            </div>
         <!-- Conteúdo -->
         <div id="DivDeTodosOsConteudo" Class="Conteudo">
-            <div id="Banner">
-            </div>
+            
             <div id="Titulo">
               <h1>
                 Editor de texto
