--- a/Topico2.html
+++ b/Topico2.html
@@ -287,7 +287,7 @@
                 As configurações do sistema, no exemplo do Windows, ajudam a controlar os softwares que são executados automaticamente enquanto o Windows está em processo de inicialização, podendo então prejudicar o desempenho da máquina quando muito softwares são executados ao mesmo tempo.
              </p>
              <div id="ConfiguracaoDoSistemaImagem">
-                <img src="images/Topico2/ConfigDoSistema.png" alt="Configurações do Sistema" class="FullIMG">
+                <img src="images/Topico2/ConfigDoSistema.PNG" alt="Configurações do Sistema" class="FullIMG">
              </div>
             </div>
          </div>
@@ -356,7 +356,7 @@
          
          </div>
       <div id="GerenciamentoDeArquivosImagem">
-         <img src="images/Topico2/GerenciamentoDeArquivos.png" alt="Gerenciador de arquivos" class="FullIMG">
+         <img src="images/Topico2/GerenciamentoDeArquivos.PNG" alt="Gerenciador de arquivos" class="FullIMG">
       </div>
         
       <div id="Linha9Coluna2">
