--- a/Topico5.html
+++ b/Topico5.html
@@ -41,14 +41,14 @@
           </div>
         </div>
 
+        <!-- BANNER -->
+        <div id="banner">
+
+        </div>
+
         <!-- CONTEÚDO -->
         <div class="Conteudo">
 
-
-
-          <div id="banner">
-
-          </div>
 
             <div id="Titulo">
 
