--- a/Topico3.html
+++ b/Topico3.html
@@ -40,6 +40,10 @@
             </div>
         </div>
     </div>
+    
+    <div id="banner">
+        
+    </div>
 
     <!-- CONTEÚDO -->
     <main>
