--- a/Topico2.html
+++ b/Topico2.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-BR">
    <head>
       <meta charset="utf-8">
       <title>Arquitetura dos Sistemas Operacionais</title>
