--- a/Topico3.html
+++ b/Topico3.html
@@ -1,5 +1,5 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8">
     <title>Sistema Operacional Código Aberto</title>
