--- a/Topico4.html
+++ b/Topico4.html
@@ -1,5 +1,6 @@
-<html>
-  <head>
+ <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
         <meta charset="utf-8">
         <title>Arquitetura dos Sistemas Operacionais</title>
         <link rel="stylesheet" type="text/css" href="Style/Topico4.css">
