update do index

--- a/htOS.html
+++ b/htOS.html
@@ -6,6 +6,7 @@
             Home
         </title>
         <link rel="stylesheet" type="text/css" href="Style/htOS.css">
+        <link rel="icon" href="images/Index/favicon.ico">
     </head>
     
     <body id="Body">
