--- a/Topico2.html
+++ b/Topico2.html
@@ -49,7 +49,10 @@
             </div>
             
             <div id="Header_Logo">
-              <img src="images/Logo.png" id="Header_LogoIMG" alt="Logo do header">
+              <img src="images/Logo.png" id="Header_LogoIMG" alt="Logo do header" style="height: 156px;
+    width: 510px;
+    float: left;
+    padding-top: 10px;">
            </div>
            <div id="Header_Menus">
               <ul class="MenuFont">
