--- a/Topico2.html
+++ b/Topico2.html
@@ -48,7 +48,7 @@
                   </ul>
             </div>
             
-            <div id="Header_Logo">
+           <div id="Header_Logo">
               <img src="images/Logo.png" id="Header_LogoIMG" alt="Logo do header">
            </div>
            <div id="Header_Menus">
@@ -73,7 +73,7 @@
         </div>
      </div>
        <!--  BANNER     -->
-    <div id="Banner" class="backgroundIMG">
+    <div id="banner" class="backgroundIMG">
        
     </div>       
      <!-- CONTEÚDO -->
@@ -201,10 +201,10 @@
            <h2 class="Linha2Subtitulos">Movimentação de diretórios e arquivos</h2>
            <div id="Linha3Coluna2">
               <p>
-               "Move" - move arquivos ou renomeia-os também. Iguual no anterior 
-               é necessário específicar o caminho para onde deseja mover o diretório
-               também é possível mover mais de um diretório ao mesmo tempo e também
-               renomer o arquivo como foi dito anteriormente.
+                   "Move" - move arquivos ou renomeia-os também. Iguual no anterior 
+                   é necessário específicar o caminho para onde deseja mover o diretório
+                   também é possível mover mais de um diretório ao mesmo tempo e também
+                   renomer o arquivo como foi dito anteriormente.
               </p>
            </div>
            <div id="Linha3Coluna2_Imagem">
