--- a/Topico2.html
+++ b/Topico2.html
@@ -73,7 +73,7 @@
         </div>
      </div>
        <!--  BANNER     -->
-    <div id="Banner" class="backgroundIMG">
+    <div id="banner" class="backgroundIMG">
        
     </div>       
      <!-- CONTEÚDO -->
